@@ -1,5 +1,8 @@
 Changes with APR-util 1.3.0
 
+  *) Add an apr_reslist_acquired_count, for determining how many outstanding
+     resources there are in a reslist.  [Ryan Phillips <ryan trolocsis.com>]
+
   *) Provide folding in autogenerated .manifest files for Win32 builders
      using VisualStudio 2005  [William Rowe]
 
